Fixed issues with headings and spacings in "About" page

--- a/src/.vuepress/theme/styles/desktop.scss
+++ b/src/.vuepress/theme/styles/desktop.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
 
 .cover {
   padding-top: 0px;
@@ -454,6 +455,22 @@
 
 /* about-page-class - Custom css for Page about */
 .about-page-class {
+  h2 {
+    font-weight: 100;
+    font-size: 40px;
+  }
+
+  h3 {
+    margin-top: .5em;
+    font-weight: 400;
+    font-size: 22px !important;
+  }
+
+  h2, h3 {
+    text-transform: uppercase;
+    line-height: 1;
+  }
+
   .card {
     background-color: #EEEEEE; 
   }
@@ -567,8 +584,9 @@
     }
 
     .offering {
-      padding: 0 2em;
-      text-align: left;
+      .offering__text {
+        padding: 0 2em;
+      }
 
       .offering__list {
         text-align: center;
